converts everything to Unity because pygame was last updated in 2009

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
 .DS_Store
-__pycache__/
-*.py[cod]
+
+/[Ll]ibrary/
+/[Tt]emp/
+/[Oo]bj/
+/[Bb]uild/
+/[Bb]uilds/
+/Assets/AssetStoreTools*
+
+*.csproj
+*.sln
+*.userprefs
+
 Planning
